# openni_tracker

./: CMakeLists.txt  README.md
launch/: openni_multilaunch.launch
src/: openni_multitracker1.cpp  openni_multitracker2.cpp
